--- a/src/App.css
+++ b/src/App.css
@@ -22,3 +22,9 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+.li-item {
+  list-style: none;
+  display: inline;
+  padding: 5px;
+}
